Creating preprocessing function

--- a/Thermographic Pipeline Testing.ipynb
+++ b/Thermographic Pipeline Testing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b9be44a4",
    "metadata": {},
    "outputs": [],
@@ -29,26 +29,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "646b39af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import rosbag\n",
+    "# import rosbag\n",
     "import os\n",
     "import tqdm\n",
     "import numpy as np\n",
-    "from sensor_msgs import point_cloud2\n",
-    "import sensor_msgs\n",
+    "# from sensor_msgs import point_cloud2\n",
+    "# import sensor_msgs\n",
     "import cv2\n",
     "from cv_bridge import CvBridge\n",
     "import matplotlib.pyplot as plt\n",
-    "import ros2_numpy"
+    "# import ros2_numpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8165a75e",
    "metadata": {},
    "outputs": [],
@@ -71,91 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f2f4c6ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/after/thermal_left_2023-08-31-14-53-51.bag', '/Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/after/thermal_right_2023-08-31-14-53-51.bag']\n",
-      " - filename          :  /Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/after/thermal_left_2023-08-31-14-53-51.bag\n",
-      " - get_message_count :  352\n",
-      " - start_time        :  1693508034.7076309\n",
-      " - end_time          :  1693508060.4848423\n",
-      " - size              :  230778409\n",
-      " - mode              :  r\n",
-      "\n",
-      "\n",
-      "\n",
-      " - get_message_count :  352\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/df/rc0lymgs6nvd3r8bhd0wfb880000gn/T/ipykernel_66358/3457782773.py:25: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
-      "  with tqdm.tqdm_notebook(total = bag.get_message_count()) as pbar:\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7554f6a2e69349a99a04288f6decc288",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/352 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " - topics :  ['/thermal_left/image']\n",
-      "/thermal_left/image\n",
-      " - filename          :  /Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/after/thermal_right_2023-08-31-14-53-51.bag\n",
-      " - get_message_count :  346\n",
-      " - start_time        :  1693508034.864173\n",
-      " - end_time          :  1693508060.4376736\n",
-      " - size              :  226845181\n",
-      " - mode              :  r\n",
-      "\n",
-      "\n",
-      "\n",
-      " - get_message_count :  346\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a76e9cf81c2b45e18b0e72736422598d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/346 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " - topics :  ['/thermal_right/image']\n",
-      "/thermal_right/image\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bag_files = []\n",
     "\n",
@@ -201,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "498bf6a0",
    "metadata": {},
    "outputs": [],
@@ -243,37 +162,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6c598b33",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing path:        /Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/after/thermal_left_2023-08-31-14-53-51.bag\n",
-      "version:     2.0\n",
-      "duration:    25.8s\n",
-      "start:       Aug 31 2023 14:53:54.71 (1693508034.71)\n",
-      "end:         Aug 31 2023 14:54:20.48 (1693508060.48)\n",
-      "size:        220.1 MB\n",
-      "messages:    352\n",
-      "compression: none [176/176 chunks]\n",
-      "types:       sensor_msgs/Image [060021388200f6f0f447d0fcd9c64743]\n",
-      "topics:      /thermal_left/image   352 msgs @ 14.3 Hz : sensor_msgs/Image...\n",
-      "Processing path:        /Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/after/thermal_right_2023-08-31-14-53-51.bag\n",
-      "version:     2.0\n",
-      "duration:    25.6s\n",
-      "start:       Aug 31 2023 14:53:54.86 (1693508034.86)\n",
-      "end:         Aug 31 2023 14:54:20.44 (1693508060.44)\n",
-      "size:        216.3 MB\n",
-      "messages:    346\n",
-      "compression: none [173/173 chunks]\n",
-      "types:       sensor_msgs/Image [060021388200f6f0f447d0fcd9c64743]\n",
-      "topics:      /thermal_right/image   346 msgs @ 14.3 Hz : sensor_msgs/Image...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    \n",
@@ -302,18 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7506c55a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/before/thermal_right_1693507917_466666676.mp4', '/Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/before/thermal_left_1693507917_566666678.mp4', '/Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/after/thermal_right_1693508034_633333346.mp4', '/Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/after/thermal_left_1693508034_633333346.mp4']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mp4_files = []\n",
     "\n",
@@ -362,28 +246,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "id": "fb02e696",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "085a3152",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.8.0) :-1: error: (-5:Bad argument) in function 'VideoWriter'\n> Overload resolution failed:\n>  - Can't parse 'frameSize'. Sequence item with index 0 has a wrong type\n>  - VideoWriter() missing required argument 'frameSize' (pos 5)\n>  - VideoWriter() missing required argument 'params' (pos 5)\n>  - VideoWriter() missing required argument 'frameSize' (pos 5)\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 38\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m# Save the masked frames as a new video\u001b[39;00m\n\u001b[0;32m---> 38\u001b[0m out \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mVideoWriter\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/output/before/mask_thermal_right_1693507917_466666676.mp4\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mVideoWriter_fourcc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmp4v\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe_width\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_height\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     40\u001b[0m out\u001b[38;5;241m.\u001b[39mwrite(masked_frame)\n\u001b[1;32m     42\u001b[0m \u001b[38;5;66;03m# Release resources\u001b[39;00m\n",
-      "\u001b[0;31merror\u001b[0m: OpenCV(4.8.0) :-1: error: (-5:Bad argument) in function 'VideoWriter'\n> Overload resolution failed:\n>  - Can't parse 'frameSize'. Sequence item with index 0 has a wrong type\n>  - VideoWriter() missing required argument 'frameSize' (pos 5)\n>  - VideoWriter() missing required argument 'params' (pos 5)\n>  - VideoWriter() missing required argument 'frameSize' (pos 5)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture('/Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/before/thermal_right_1693507917_466666676.mp4')\n",
+    "# Define variables\n",
+    "file_name = 'vid-edited.mp4'\n",
+    "new_file_name = 'vid-edited3.mp4'\n",
     "\n",
+    "cap = cv2.VideoCapture(file_name)\n",
     "fps = 30\n",
     "\n",
-    "# Define region of interest\n",
     "# Read the first frame to determine frame dimensions\n",
     "ret, frame = cap.read()\n",
     "if not ret:\n",
@@ -392,10 +276,12 @@
     "\n",
     "# Create a window to display the video and select ROI\n",
     "cv2.namedWindow('Select ROI')\n",
-    "roi = cv2.selectROI('Select ROI', frame)\n",
+    "x, y, w, h = cv2.selectROI('Select ROI', frame)\n",
+    "frame_height = len(frame[y:y+h])\n",
+    "frame_width = len(frame[x:x+w])\n",
     "\n",
-    "# Extract the coordinates of the ROI\n",
-    "x, y, w, h = roi\n",
+    "# Create the video writer\n",
+    "writer = cv2.VideoWriter(new_file_name, cv2.VideoWriter_fourcc(*'mp4v'), fps, (w, h))\n",
     "\n",
     "# Loop through the video frames\n",
     "while True:\n",
@@ -405,38 +291,21 @@
     "\n",
     "    # Crop the frame to the selected ROI\n",
     "    roi_frame = frame[y:y+h, x:x+w]\n",
-    "    frame_height = frame[y:y+h]\n",
-    "    frame_width = frame[x:x+w]\n",
     "    \n",
     "    # Display the ROI frame\n",
     "    cv2.imshow('ROI Frame', roi_frame)\n",
     "\n",
+    "    # Write the frame to the video file\n",
+    "    writer.write(roi_frame)\n",
+    "\n",
     "    # Press 'q' to exit the loop\n",
     "    if cv2.waitKey(10) & 0xFF == ord('q'):\n",
     "        break\n",
-    "\n",
-    "# Save the masked frames as a new video\n",
-    "out = cv2.VideoWriter('/Users/asghar/Desktop/AirLab/thermographic_inspection/2023-08-31/output/before/mask_thermal_right_1693507917_466666676.mp4', cv2.VideoWriter_fourcc(*'mp4v'), fps, (frame_width, frame_height))\n",
-    "\n",
-    "out.write(masked_frame)\n",
     "        \n",
     "# Release resources\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()\n",
-    "\n",
-    "\n",
-    "# # Apply to the original frame\n",
-    "# masked_frame = cv2.bitwise_and(frame, frame, mask=binary_mask)\n",
-    "\n",
-    "# # Display the masked frame in real-time (for visualization)\n",
-    "# cv2.imshow('Masked Frame', masked_frame)\n",
-    "# cv2.waitKey(0)\n",
-    "# cv2.destroyAllWindows()\n",
-    "\n",
-    "\n",
-    "# # Release capture\n",
-    "# out.release()\n",
-    "# cap.release()"
+    "writer.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -582,19 +451,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5569da5a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "OpenCV: FFMPEG: tag 0x47504a4d/'MJPG' is not supported with codec id 7 and format 'mp4 / MP4 (MPEG-4 Part 14)'\n",
-      "OpenCV: FFMPEG: fallback to use tag 0x7634706d/'mp4v'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -1083,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
