Modified the display process to show a colorbar mapping the colors to values

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -11,79 +11,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = np.array([\n",
-    "    [1, 2, 3], \n",
-    "    [4, 5, 6]\n",
-    "],\n",
-    "dtype=np.float64)"
+    "arr1 = np.random.randint(1, 100, size=(3, 3))\n",
+    "arr2 = np.random.randint(1, 100, size=(3, 3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.mean(arr, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.std(arr, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr - np.mean(arr, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i, row in enumerate(arr):\n",
-    "    m = np.mean(row)\n",
-    "    s = np.std(row)\n",
-    "\n",
-    "    arr[i] = (row - m) / s\n",
-    "\n",
-    "    # for j in range(len(row)):\n",
-    "    #     arr[i][j] = (row[j] - m) / s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-1.22474487,  0.        ,  1.22474487],\n",
-       "       [-1.22474487,  0.        ,  1.22474487]])"
+       "array([[87, 47,  4],\n",
+       "       [ 2, 22, 62],\n",
+       "       [85, 80, 73]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr"
+    "arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[88, 75, 89],\n",
+       "       [42, 89, 61],\n",
+       "       [15, 62, 75]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min([arr1, arr2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max([arr1, arr2])"
    ]
   },
   {
