Added SPCT and ESPCT functions
Note: The implementations for SPCT and ESPCT still have issues

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -15,8 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr1 = np.random.randint(1, 100, size=(3, 3))\n",
-    "arr2 = np.random.randint(1, 100, size=(3, 3))"
+    "A = np.array([[1, 2, 3], [4, 5, 6]])"
    ]
   },
   {
@@ -27,9 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[59, 88, 83],\n",
-       "       [99, 58, 81],\n",
-       "       [67, 59, 29]])"
+       "(2, 3)"
       ]
      },
      "execution_count": 3,
@@ -38,7 +35,7 @@
     }
    ],
    "source": [
-    "arr1"
+    "A.shape"
    ]
   },
   {
@@ -49,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "array([75.        , 68.33333333, 64.33333333])"
+       "array([2.5, 3.5, 4.5])"
       ]
      },
      "execution_count": 4,
@@ -58,7 +55,28 @@
     }
    ],
    "source": [
-    "np.mean(arr1, axis=0)"
+    "np.mean(A, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.5, -1.5, -1.5],\n",
+       "       [ 1.5,  1.5,  1.5]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A - np.mean(A, axis=0)"
    ]
   },
   {
